--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
     "fastify": "^4.9.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.7",
     "@types/node": "^18.11.8",
     "prisma": "^4.5.0",
+    "prisma-erd-generator": "^1.2.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
