--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start:dev": "ts-node-dev --respawn --watch src src/index.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^8.1.1",
     "@prisma/client": "^4.5.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2"
