--- a/client-web/package.json
+++ b/client-web/package.json
@@ -18,6 +18,15 @@
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "dotenv": "^16.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emiscode/world-cup-2022-betting-app"
+  },
+  "engines": {
+    "node": ">=18.12.0",
+    "npm": ">=8.19.2"
   }
 }
