--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "@fastify/cors": "^8.1.1",
     "@prisma/client": "^4.5.0",
     "dotenv": "^16.0.3",
-    "fastify": "^4.9.2"
+    "fastify": "^4.9.2",
+    "short-unique-id": "^4.4.4",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.7",
