--- a/client-web/package.json
+++ b/client-web/package.json
@@ -13,13 +13,14 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "dotenv": "^16.0.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
+    "next-i18next": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4",
-    "dotenv": "^16.0.3"
+    "typescript": "4.8.4"
   },
   "repository": {
     "type": "git",
