--- a/client-web/package.json
+++ b/client-web/package.json
@@ -20,6 +20,7 @@
     "next-i18next": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.3",
     "typescript": "4.8.4"
   },
   "repository": {
