--- a/client-web/package.json
+++ b/client-web/package.json
@@ -30,5 +30,10 @@
   "engines": {
     "node": ">=18.12.0",
     "npm": ">=8.19.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
