--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -24,6 +24,7 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-country-flag": "^1.1.9",
     "react-native-safe-area-context": "4.3.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
