--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.1.1",
+    "@fastify/jwt": "^6.3.2",
     "@prisma/client": "^4.5.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
